# HS

./: .gitignore  README.md  main.ino  profile.proto  profiles.proto
.cargo/: config.toml
.trunk/: trunk.yaml
calibrate/: calibrate.ino
configurator/: Cargo.toml  build.rs  build.sh  index.html  main.js  package.json  preload.js  run.sh  styles.css
configurator/backend/: Cargo.toml  build.rs
configurator/backend/src/: main.rs  profiles.rs
configurator/frontend/: .eslintignore  Cargo.toml  README.md  index.node  package.json  quasar.config.js  tsconfig.json
configurator/frontend/src/: App.vue
configurator/frontend/src-electron/: electron-preload.js
configurator/frontend/src/components/: ExampleComponent.vue  models.ts
configurator/frontend/src/pages/: IndexPage.vue
configurator/profiles/: default  encode.sh  ggst  hollow_knight  melee  nasb  rocket_league  ssbm  ssbu
configurator/profiles/PC/: default.json  ssbm.json
configurator/profiles/textproto/: hollow_knight.textpb  ssbm.textpb
configurator/src/: build.rs  encoder.rs  lib.rs  main.rs  profile.proto  profiles.proto  profiles.rs
configurator/utility/: build.sh  compile.py
configurator/utility/text_profiles/: default.textpb  ggst.textpb  hollow_knight.textpb  melee.textpb  multiversus.textpb  nasb.textpb  rocket_league.textpb  sf6.textpb  ssbm.textpb  ssbm_ics.textpb  ssbu.textpb
controller/calibrate/: calibrate.ino
controller/main/: build.sh  configurator.cpp  configurator.h  configure.cpp  configure.h  controller.cpp  controller.h  decoder.cpp  decoder.h  hall_joystick.cpp  hall_joystick.h  main.ino  ns_controller.cpp  ns_controller.h  pc_controller.cpp  pc_controller.h  pins.cpp  pins.h  profiles.cpp  profiles.h  usb_controller.cpp  usb_controller.h
docs/: INSTALL.md
hardware/joystick/: magnet_harness.scad  sensor_harness.scad
hardware/joystick/src/: magnet_harness.scad  sensor_harness.scad  small_ssbm_gate.scad  ssbm_gate.scad
joystick/src/: magnet_harness.scad  sensor_harness.scad
main/: BUILD  CMakeLists.txt  CMakeLists.txt.in  WORKSPACE  build.sh  configurator.cpp  configurator.h  constants.h  controller.cpp  controller.h  decoder.cpp  decoder.h  gen_protos.sh  hall_joystick.cc  hall_joystick.cpp  hall_joystick.h  hall_sensor.h  joystick.cc  joystick.h  main.ino  mcu.h  mock_teensy.h  ngc_controller.cc  ngc_controller.h  ns_controller.cpp  ns_controller.h  nspad.h  nspad_impl.h  pc_controller.cpp  pc_controller.h  pc_controller_test.cpp  pins.cpp  pins.h  snapback_filter.h  teensy.h  teensy_impl.h  test.sh  tlv493d_sensor.h  usb_controller.cc  usb_controller.cpp  (+3 more)
main/test/: configurator_test.cpp  controller_test.cpp  decoder_test.cpp  hall_joystick_test.cpp  mock_hall_sensor.h  mock_mcu.h  mock_nspad.h  mock_teensy.h  ns_controller_test.cpp  pc_controller_test.cpp  pins_test.cpp  test.sh  test_util.cpp  test_util.h  util.cpp  util_test.cpp
