[package]
name = "configurator"
version = "0.1.0"
authors = ["Hiram Silvey <hello@iamhiram.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytes = "1.0.1"
mockall = "0.9.1"
mockall_double = "0.2.0"
prost = "0.7.0"
serialport = "4.0.1"

[build-dependencies]
prost-build = "0.7.0"