[package]
name = "configurator"
version = "0.1.0"
authors = ["Hiram Silvey <hello@iamhiram.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
bytes = "1.1.0"
druid = { git = "https://github.com/linebender/druid.git" }
js-sys = "0.3.56"
prost = "0.9.0"
serialport = "4.0.1"
crossbeam-channel = "0.5.2"

[build-dependencies]
prost-build = "0.9.0"